# stock-predict

./: .commitlintrc.json  .editorconfig  .gitignore  DESIGN.md  HSGT_CRAWLER_README.md  PRODUCT.md  README.md  docker-compose.yml
backend-dotnet/: Program.cs  StockPredictApi.csproj  StockPredictApi.http  appsettings.json
backend-go/: .dockerignore  (+5 more)
model-training/: README.md  pyproject.toml  requirements.txt
model-training/artifacts/: .gitkeep
model-training/configs/: all_fund_nav_daily_v1.yaml  continuous_learning.example.yml  daily_weekly_index_fund.example.yml  index_fund_baseline.example.yml  index_fund_intraday_3m_tournament.example.yml  index_fund_intraday_tournament.example.yml  index_fund_tournament.example.yml  index_fund_tournament_train.example.yml  index_fund_universe.example.csv  index_fund_weekly_tournament.example.yml  intraday_5m.example.yml  monitoring_daily.example.yml  monitoring_intraday_3m.example.yml  monitoring_intraday_5m.example.yml  next_day.example.yml  public_mvp_intraday_3m_pipeline.example.yml  public_mvp_intraday_pipeline.example.yml  public_mvp_pipeline.example.yml  retraining_cycle_daily.example.yml  retraining_cycle_intraday_3m.example.yml  retraining_cycle_intraday_5m.example.yml  retraining_cycle_weekly.example.yml  shadow_evaluation_daily.example.yml
model-training/data/processed/: .gitkeep
model-training/data/raw/: .gitkeep
model-training/reports/: .gitkeep
model-training/src/fund_model_training/: __init__.py  build_all_fund_samples.py  build_index_fund_dataset.py  build_intraday_index_fund_dataset.py  build_intraday_samples.py  build_panic_factor.py  build_panic_proxy.py  build_samples.py  collect_data.py  config.py  drift_report.py  features.py  index_fund_contract.py  labels.py  metrics.py  onnx_export.py  predict_model.py  prediction_interval.py  prediction_logging.py  promote_model.py  regime_evaluation.py  return_decomposition.py  rollback_model.py  run_index_fund_pipeline.py  run_intraday_pipeline.py  run_monitoring_cycle.py  run_retraining_cycle.py  schema.py  serve_model.py  shadow_evaluation.py  split.py  train.py  train_baseline.py  train_tournament.py  validate_contract.py
model-training/src/fund_model_training/collectors/: __init__.py  akshare_adapter.py  common.py
model-training/tests/: test_build_index_fund_dataset.py  test_build_intraday_index_fund_dataset.py  test_build_intraday_samples.py  test_build_samples.py  test_collect_data.py  test_drift_report.py  test_index_fund_contract.py  test_labels.py  test_onnx_export.py  test_panic_factor.py  test_panic_proxy.py  test_predict_model.py  test_prediction_interval.py  test_prediction_logging.py  test_promote_model.py  test_regime_evaluation.py  test_return_decomposition.py  test_rollback_model.py  test_run_index_fund_pipeline.py  test_run_intraday_pipeline.py  test_run_monitoring_cycle.py  test_run_retraining_cycle.py  test_serve_model.py  test_shadow_evaluation.py  test_train_baseline.py  test_train_tournament.py
(+456 files in other folders)
