[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-model-training"
version = "0.1.0"
description = "Training pipeline for stock-predict fund direction models"
requires-python = ">=3.11,<3.14"
readme = "README.md"

[project.scripts]
fund-build-panic-factor = "fund_model_training.build_panic_factor:main"
fund-build-index-fund-dataset = "fund_model_training.build_index_fund_dataset:main"
fund-build-intraday-index-fund-dataset = "fund_model_training.build_intraday_index_fund_dataset:main"
fund-build-intraday-samples = "fund_model_training.build_intraday_samples:main"
fund-build-samples = "fund_model_training.build_samples:main"
fund-collect-data = "fund_model_training.collect_data:main"
fund-drift-report = "fund_model_training.drift_report:main"
fund-predict-model = "fund_model_training.predict_model:main"
fund-prediction-log = "fund_model_training.prediction_logging:main"
fund-promote-model = "fund_model_training.promote_model:main"
fund-rollback-model = "fund_model_training.rollback_model:main"
fund-run-index-pipeline = "fund_model_training.run_index_fund_pipeline:main"
fund-run-intraday-pipeline = "fund_model_training.run_intraday_pipeline:main"
fund-run-monitoring-cycle = "fund_model_training.run_monitoring_cycle:main"
fund-run-retraining-cycle = "fund_model_training.run_retraining_cycle:main"
fund-serve-model = "fund_model_training.serve_model:main"
fund-shadow-evaluation = "fund_model_training.shadow_evaluation:main"
fund-train-baseline = "fund_model_training.train_baseline:main"
fund-train-tournament = "fund_model_training.train_tournament:main"
fund-validate-contract = "fund_model_training.validate_contract:main"

[project.optional-dependencies]
data = ["pandas>=2.2", "akshare>=1.16", "requests>=2.31", "mootdx>=0.11", "lightgbm>=4.0"]
dev = ["pytest>=9.0"]
test = ["pytest>=9.0"]
mlops = ["evidently>=0.4", "river>=0.21", "mlflow>=3.0"]

[tool.setuptools.packages.find]
where = ["src"]
